[gd_scene load_steps=5 format=3 uid="uid://bdcsvccg7p3hs"]

[ext_resource type="PackedScene" uid="uid://b8fmwcegp1us" path="res://Scenes/SkeletonPathFollow3D.tscn" id="1_ex0k2"]
[ext_resource type="Script" path="res://Scripts/Snake.gd" id="1_soglc"]
[ext_resource type="PackedScene" uid="uid://cpado5sjppwak" path="res://Imported/steve.glb" id="2_p4aj0"]

[sub_resource type="Curve3D" id="Curve3D_ip3j1"]
resource_local_to_scene = true
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -5, 0, 0, 0, 0, 0, 0, 0, 0, 5, 0, 0, 0, 0, 0, 0, 0, 0, 7, 0, 0),
"tilts": PackedFloat32Array(0, 0, 0)
}
point_count = 3
up_vector_enabled = false

[node name="Snake" type="Node3D"]
script = ExtResource("1_soglc")

[node name="SnakePath" type="Path3D" parent="."]
curve = SubResource("Curve3D_ip3j1")

[node name="SkeletonPathFollow3D" parent="SnakePath" instance=ExtResource("1_ex0k2")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 4.00111, 0, 0)
progress = 9.0
loop = false

[node name="steve" parent="SnakePath/SkeletonPathFollow3D" instance=ExtResource("2_p4aj0")]

[node name="NavAgent" type="NavigationAgent3D" parent="SnakePath/SkeletonPathFollow3D/steve"]
radius = 2.0
max_speed = 30.0

[connection signal="velocity_computed" from="SnakePath/SkeletonPathFollow3D/steve/NavAgent" to="." method="_on_nav_agent_velocity_computed"]
